--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,5 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.5.17", features = ["derive"] }
-http-body-util = "0.1.2"
-hyper = { version = "1.4.1", features = ["full"] }
-hyper-util = { version = "0.1.8", features = ["full"] }
+reqwest = "0.12.7"
 tokio = { version = "1.40.0", features = ["full"] }
