--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,5 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.5.17", features = ["derive"] }
-reqwest = "0.12.7"
+reqwest = { version = "0.12.7", features = ["blocking"] }
 tokio = { version = "1.40.0", features = ["full"] }
